--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,15 +38,19 @@ jobs:
       - name: ec2 SSH
         uses: appleboy/ssh-action@v1.0.3
         env:
-          DB_HOST: ${{ secrets.DB_HOST }}
-          MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
+          SERVER_PORT: 8080
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
-          DB_USERNAME: ${{ secrets.DB_USERNAME }}
+          USER_SERVICE_HOST: ${{ secrets.USER_SERVICE_HOST }}
+          BOARD_SERVICE_HOST: ${{ secrets.BOARD_SERVICE_HOST }}
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
-          envs: DB_HOST, MYSQL_ROOT_PASSWORD, JWT_SECRET, DB_USERNAME
+          envs: >
+            SERVER_PORT,
+            JWT_SECRET,
+            USER_SERVICE_HOST,
+            BOARD_SERVICE_HOST
           script_stop: true
           script: |
             cd /home/ubuntu/msa-api-gateway-service
