--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,8 +40,8 @@ jobs:
         env:
           SERVER_PORT: 8080
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
-          USER_SERVICE_HOST: ${{ secrets.ALB_BASE_URL }}
-          BOARD_SERVICE_HOST: ${{ secrets.ALB_BASE_URL }}
+          USER_SERVICE_URL: ${{ secrets.ALB_BASE_URL }}
+          BOARD_SERVICE_URL: ${{ secrets.ALB_BASE_URL }}
         with:
           host: ${{ secrets.GATEWAY_SERVICE_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
@@ -49,8 +49,8 @@ jobs:
           envs: >
             SERVER_PORT,
             JWT_SECRET,
-            USER_SERVICE_HOST,
-            BOARD_SERVICE_HOST
+            USER_SERVICE_URL,
+            BOARD_SERVICE_URL
           script_stop: true
           script: |
             cd /home/ubuntu/msa-api-gateway-service
