--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -52,7 +52,11 @@ jobs:
           script_stop: true
           script: |
             cd /home/ubuntu/msa-api-gateway-service
-            git pull origin master
+
+            git fetch origin
+            git reset --hard origin/main
+            git clean -fd
+
             aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin 267837905230.dkr.ecr.ap-northeast-2.amazonaws.com
             docker compose pull
             docker compose up -d
