edit build and compose yml

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,7 +40,8 @@ jobs:
         env:
           SERVER_PORT: 8080
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
-          INTERNAL_ALB_BASE_URL: ${{ secrets.INTERNAL_ALB_BASE_URL }}
+          USER_SERVICE_URL: http://${{ secrets.USER_SERVICE_HOST }}
+          BOARD_SERVICE_URL: http://${{ secrets.BOARD_SERVICE_HOST }}
         with:
           host: ${{ secrets.GATEWAY_SERVICE_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
@@ -48,7 +49,8 @@ jobs:
           envs: >
             SERVER_PORT,
             JWT_SECRET,
-            INTERNAL_ALB_BASE_URL
+            USER_SERVICE_URL,
+            BOARD_SERVICE_URL
           script_stop: true
           script: |
             cd /home/ubuntu/msa-api-gateway-service
