--- a/compose.yml
+++ b/compose.yml
@@ -7,5 +7,5 @@ services:
     environment:
       SERVER_PORT: 8080
       JWT_SECRET: ${JWT_SECRET}
-      USER_SERVICE_URL: http://${INTERNAL_ALB_BASE_URL}
-      BOARD_SERVICE_URL: http://${INTERNAL_ALB_BASE_URL}
+      USER_SERVICE_URL: ${USER_SERVICE_URL}
+      BOARD_SERVICE_URL: ${BOARD_SERVICE_URL}
