--- a/compose.yml
+++ b/compose.yml
@@ -4,8 +4,10 @@ services:
     restart: unless-stopped
     ports:
       - "8080:8080"
-    environment:
-      SERVER_PORT: 8080
-      JWT_SECRET: ${JWT_SECRET}
-      USER_SERVICE_URL: ${USER_SERVICE_URL}
-      BOARD_SERVICE_URL: ${BOARD_SERVICE_URL}
+    env_file:
+      - .env
+    # environment:
+    #   SERVER_PORT: ${SERVER_PORT}
+    #   JWT_SECRET: ${JWT_SECRET}
+    #   USER_SERVICE_URL: ${USER_SERVICE_URL}
+    #   BOARD_SERVICE_URL: ${BOARD_SERVICE_URL}
