--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,79 +34,29 @@ jobs:
           tags: |
             ${{ steps.login-ecr.outputs.registry }}/board-system/gateway-service:${{ github.sha }}
             ${{ steps.login-ecr.outputs.registry }}/board-system/gateway-service:latest
-      
+        
       - name: s3 upload
         run: |
           aws s3 cp deploy/ \
           s3://bs-bucket-a/gateway-service/deploy/ \
           --recursive
-
-      - name: ssm command
-        env:
-          SERVICE_NAME: gateway-service
-          DEPLOY_DIR: /home/ubuntu/gateway-service
-        run: |
-          COMMAND_ID=$(aws ssm send-command \
-            --query "Command.CommandId" \
-            --output text \
-            --region ap-northeast-2 \
-            --targets "Key=tag:Service,Values=gateway-service" \
-            --document-name "AWS-RunShellScript" \
-            --parameters "commands=[
-            \"mkdir -p ${DEPLOY_DIR}\",
-            \"export SERVICE_NAME=${SERVICE_NAME}\",
-            \"export IMAGE_TAG=${{ github.sha }}\",
-            \"aws s3 cp s3://bs-bucket-a/${SERVICE_NAME}/deploy/deploy.sh ${DEPLOY_DIR}/deploy.sh\",
-            \"chmod +x ${DEPLOY_DIR}/deploy.sh\",
-            \"bash ${DEPLOY_DIR}/deploy.sh\"
-            ]")
-
-          INSTANCE_ID=$(aws ec2 describe-instances \
-            --region ap-northeast-2 \
-            --filters "Name=tag:Service,Values=gateway-service" \
-                      "Name=instance-state-name,Values=running" \
-            --query "Reservations[0].Instances[0].InstanceId" \
-            --output text)
-
-          aws ssm wait command-executed \
-            --command-id ${COMMAND_ID} \
-            --instance-id ${INSTANCE_ID}
-
-      # - name: ec2 SSH
-      #   uses: appleboy/ssh-action@v1.0.3
-      #   env:
-      #     SERVER_PORT: 8080
-      #     JWT_SECRET: ${{ secrets.JWT_SECRET }}
-      #     USER_SERVICE_URL: http://${{ secrets.USER_SERVICE_HOST }}
-      #     BOARD_SERVICE_URL: http://${{ secrets.BOARD_SERVICE_HOST }}
-      #   with:
-      #     host: ${{ secrets.GATEWAY_SERVICE_HOST }}
-      #     username: ${{ secrets.EC2_USERNAME }}
-      #     key: ${{ secrets.EC2_PRIVATE_KEY }}
-      #     envs: >
-      #       SERVER_PORT,
-      #       JWT_SECRET,
-      #       USER_SERVICE_URL,
-      #       BOARD_SERVICE_URL
-      #     script_stop: true
-      #     script: |
-      #       cd /home/ubuntu/msa-api-gateway-service
-
-      #       git fetch origin
-      #       git reset --hard origin/master
-      #       git clean -fd
-
-      #       aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin 267837905230.dkr.ecr.ap-northeast-2.amazonaws.com
-      #       docker compose pull
-      #       docker compose up -d
-  
-      # - name: send trigger
-      #   run: |
-      #     curl -L \
-      #       -X POST \
-      #       -H "Accept: application/vnd.github+json" \
-      #       -H "Authorization: Bearer ${{ secrets.PAT }}" \
-      #       -H "X-GitHub-Api-Version: 2022-11-28" \
-      #       https://api.github.com/repos/yunjeongwon/msa-infra/dispatches \
-      #       -d '{"event_type":"deploy","client_payload":{"service":"gateway-service"}}'
       
+      - name: save image tag as sha
+        run: |
+          aws ssm put-parameter \
+            --name "/prod/board-system/gateway-service/SERVICE_NAME" \
+            --value "gateway-service" \
+            --type String \
+            --overwrite
+
+          aws ssm put-parameter \
+            --name "/prod/board-system/gateway-service/IMAGE_TAG" \
+            --value "${{ github.sha }}" \
+            --type String \
+            --overwrite
+      
+      - name: ASG instance refresh
+        run: |
+          aws autoscaling start-instance-refresh \
+            --auto-scaling-group-name gateway-service-asg \
+            --preferences MinHealthyPercentage=100
